syntax = "proto3";

package br.com.mdfilipiaki.springwithjunit;

option java_multiple_files = true;
option java_package = "br.com.mdfilipiaki.springwithjunit";

service ProductServiceRpc {
  rpc getProduct(EmptyRequest) returns (ProductResponse);
}

message EmptyRequest {}

message ProductRequest {
  int64 id = 1;
}

message ProductResponse {
  string name = 1;
  float price = 2;
}
